--- a/NewDecoder.ipynb
+++ b/NewDecoder.ipynb
@@ -33,7 +33,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "87ea7f60-b9c8-4e24-99d0-8bbde96922a4"
+        "outputId": "3e98cbcc-e324-4a65-851d-74d554fcb5ee"
       },
       "source": [
         "from google.colab import drive\n",
@@ -134,10 +134,9 @@
         "        return img\n",
         "\n",
         "class EmbedImagePairs(Dataset):\n",
-        "    def __init__(self, data_list_path, face_encoder, mean, std, device, size=224):\n",
+        "    def __init__(self, data_list_path, face_encoder, mean, std, device, size=64):\n",
         "        super().__init__()\n",
         "        self.images = ImageFolder(data_list_path)\n",
-        "        print('image loaded')\n",
         "\n",
         "        self.face_encoder = face_encoder\n",
         "\n",
@@ -174,7 +173,7 @@
         "\n",
         "        return face_vectors, image_"
       ],
-      "execution_count": 15,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -396,8 +395,41 @@
         "    def __call_(self, phase, img):\n",
         "        return self.data_transform[phase](img)"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s86Vf2YTHzvp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "50e324a6-ef2e-4ba9-d0d4-0143875875d5"
+      },
+      "source": [
+        "from torch import nn, optim\n",
+        "\n",
+        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+        "# Set Model\n",
+        "model = Generator(4096).to(device)\n",
+        "print('Created Generator')\n",
+        "# Set loss and optimizer\n",
+        "criterion = nn.MSELoss()\n",
+        "optimizer = optim.Adam(model.parameters())"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Created Generator\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -406,9 +438,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 174
+          "height": 87
         },
-        "outputId": "e1e6ccb5-8fb7-4a5a-ef51-957eb33bbffa"
+        "outputId": "fd813b7e-809d-4557-ba63-4a41838892a9"
       },
       "source": [
         "import argparse\n",
@@ -420,6 +452,7 @@
         "from torch import nn, optim\n",
         "from tqdm import tqdm\n",
         "from google.colab.patches import cv2_imshow\n",
+        "import cv2\n",
         "\n",
         "\n",
         "#from dataloader import EmbedImagePairs\n",
@@ -442,12 +475,15 @@
         "\n",
         "    running_loss = 0\n",
         "\n",
+        "    count = 0\n",
         "    for x, y in trn_dataloader:\n",
+        "        count += 1\n",
         "        x = x.squeeze().to(device)  \n",
-        "        cv2_imshow(y[0].numpy().reshape(224,224,3)*255)\n",
-        "        y = y.to(device)\n",
         "\n",
-        "       \n",
+        "        y_img = cv2.cvtColor(np.einsum('abc->bca',y[0].numpy()*255),cv2.COLOR_BGR2RGB)\n",
+        "        cv2_imshow(y_img)\n",
+        "\n",
+        "        y = y.to(device)\n",
         "\n",
         "        optimizer.zero_grad()\n",
         "\n",
@@ -457,9 +493,10 @@
         "        loss.backward()\n",
         "        optimizer.step()\n",
         "        \n",
-        "        cv2_imshow(outputs[0].cpu().detach().numpy().reshape(224,224,3)*255)\n",
+        "        o_img = cv2.cvtColor(np.einsum('abc->bca',outputs[0].cpu().detach().numpy()*255),cv2.COLOR_BGR2RGB)\n",
+        "        cv2_imshow(o_img)\n",
         "        running_loss += loss.item() * x.size(0)\n",
-        "        print(\"loss:\", running_loss)\n",
+        "        print(\"loss:\", running_loss / count)\n",
         "\n",
         "    \n",
         "    trn_loss = running_loss/len(trn_dataloader.dataset)\n",
@@ -486,24 +523,20 @@
         "\n",
         "base_dir='/content/drive/My Drive/Speech2Face/'\n",
         "input=\"vox1_dataset/unzippedFaces\"\n",
-        "batch_size=64\n",
+        "batch_size=128\n",
         "num_epochs=150\n",
         "checkpoint_path=None\n",
         "\n",
         "\n",
-        "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-        "# Set Model\n",
-        "model = Generator(4096).to(device)\n",
-        "print('Created Generator')\n",
+        "\n",
+        "\n",
         "# Load face-encoder model\n",
         "face_encoder_path = join(base_dir, \"Pretrained\", \"vgg_face_dag.pth\")\n",
         "face_encoder_model = vgg_face_dag(face_encoder_path).to(device)\n",
         "color_mean, color_std = face_encoder_model.meta[\"mean\"], face_encoder_model.meta[\"std\"]\n",
         "color_mean = [tmp / 255.0 for tmp in color_mean]\n",
         "color_std = [tmp / 255.0 for tmp in color_std]\n",
-        "# Set loss and optimizer\n",
-        "criterion = nn.MSELoss()\n",
-        "optimizer = optim.Adam(model.parameters())\n",
+        "\n",
         "# Set DataLoader\n",
         "input_path = join(base_dir, input)\n",
         "print('Image Pairing')\n",
@@ -526,7 +559,6 @@
         {
           "output_type": "stream",
           "text": [
-            "modello creato\n",
             "Image Pairing\n"
           ],
           "name": "stdout"
@@ -534,10 +566,7 @@
         {
           "output_type": "stream",
           "text": [
-            "\n",
-            "\n",
-            "\n",
-            "  0%|          | 0/151 [00:00<?, ?it/s]\u001b[A\u001b[A\u001b[A"
+            "\r  0%|          | 0/151 [00:00<?, ?it/s]"
           ],
           "name": "stderr"
         },
@@ -545,8 +574,7 @@
           "output_type": "stream",
           "text": [
             "image loaded\n",
-            "creazione dataloader\n",
-            "So qui\n",
+            "Creating dataloader\n",
             "Start Training\n"
           ],
           "name": "stdout"
