--- a/Speech2Face.ipynb
+++ b/Speech2Face.ipynb
@@ -78,20 +78,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cXILePzTdsI_",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# !unzip \"/content/drive/My Drive/Speech2Face/ff/vox.zip\" -d \"/content/drive/My Drive/Speech2Face/ff/ext/\""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "rBM5q_83fkuE",
+        "id": "XOqMHNfkwaCL",
         "colab_type": "code",
         "colab": {}
       },
@@ -117,46 +104,122 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "meRq3GNUTrIO",
+        "id": "cXILePzTdsI_",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "wav, sr = librosa.load('/content/drive/My Drive/Speech2Face/vox1_dataset/vox_audios/ext/wav/id10270/OhfKF8FSq3Y/00003.wav',sr = 16000, duration = 6.0 ,mono = True) "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "arqNwvJpU1pI",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "! ls -l \"wav\" | wc -l \n",
-        "#spectro = librosa.core.stft(wav, n_fft = 512, hop_length = int(np.ceil(0.01 * sr)),win_length = int(np.ceil(0.025 * sr)) , window='hann', center=True,pad_mode='reflect')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "9xGGujur8DFE",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "##################### DEPENDECIES ###########################\n",
+        "import torch\n",
+        "import torch.nn as nn\n",
         "\n",
         "\n",
-        "meta = pd.read_csv('/content/drive/My Drive/Speech2Face/vox1_dataset/vox1_meta.csv',sep='\\t')\n",
+        "class Vgg_face_dag(nn.Module):\n",
         "\n",
-        "meta = meta.drop('Gender',axis=1)\n",
-        "meta = meta.drop('Nationality',axis=1)\n",
-        "meta = meta.drop('Set',axis=1)\n",
-        "meta"
+        "    def __init__(self):\n",
+        "        super(Vgg_face_dag, self).__init__()\n",
+        "        self.meta = {'mean': [129.186279296875, 104.76238250732422, 93.59396362304688],\n",
+        "                     'std': [1, 1, 1],\n",
+        "                     'imageSize': [224, 224, 3]}\n",
+        "        self.conv1_1 = nn.Conv2d(3, 64, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu1_1 = nn.ReLU(inplace=True)\n",
+        "        self.conv1_2 = nn.Conv2d(64, 64, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu1_2 = nn.ReLU(inplace=True)\n",
+        "        self.pool1 = nn.MaxPool2d(kernel_size=[2, 2], stride=[2, 2], padding=0, dilation=1, ceil_mode=False)\n",
+        "        self.conv2_1 = nn.Conv2d(64, 128, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu2_1 = nn.ReLU(inplace=True)\n",
+        "        self.conv2_2 = nn.Conv2d(128, 128, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu2_2 = nn.ReLU(inplace=True)\n",
+        "        self.pool2 = nn.MaxPool2d(kernel_size=[2, 2], stride=[2, 2], padding=0, dilation=1, ceil_mode=False)\n",
+        "        self.conv3_1 = nn.Conv2d(128, 256, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu3_1 = nn.ReLU(inplace=True)\n",
+        "        self.conv3_2 = nn.Conv2d(256, 256, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu3_2 = nn.ReLU(inplace=True)\n",
+        "        self.conv3_3 = nn.Conv2d(256, 256, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu3_3 = nn.ReLU(inplace=True)\n",
+        "        self.pool3 = nn.MaxPool2d(kernel_size=[2, 2], stride=[2, 2], padding=0, dilation=1, ceil_mode=False)\n",
+        "        self.conv4_1 = nn.Conv2d(256, 512, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu4_1 = nn.ReLU(inplace=True)\n",
+        "        self.conv4_2 = nn.Conv2d(512, 512, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu4_2 = nn.ReLU(inplace=True)\n",
+        "        self.conv4_3 = nn.Conv2d(512, 512, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu4_3 = nn.ReLU(inplace=True)\n",
+        "        self.pool4 = nn.MaxPool2d(kernel_size=[2, 2], stride=[2, 2], padding=0, dilation=1, ceil_mode=False)\n",
+        "        self.conv5_1 = nn.Conv2d(512, 512, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu5_1 = nn.ReLU(inplace=True)\n",
+        "        self.conv5_2 = nn.Conv2d(512, 512, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu5_2 = nn.ReLU(inplace=True)\n",
+        "        self.conv5_3 = nn.Conv2d(512, 512, kernel_size=[3, 3], stride=(1, 1), padding=(1, 1))\n",
+        "        self.relu5_3 = nn.ReLU(inplace=True)\n",
+        "        self.pool5 = nn.MaxPool2d(kernel_size=[2, 2], stride=[2, 2], padding=0, dilation=1, ceil_mode=False)\n",
+        "        self.fc6 = nn.Linear(in_features=25088, out_features=4096, bias=True)\n",
+        "        self.relu6 = nn.ReLU(inplace=True)\n",
+        "        self.dropout6 = nn.Dropout(p=0.5)\n",
+        "        self.fc7 = nn.Linear(in_features=4096, out_features=4096, bias=True)\n",
+        "        self.relu7 = nn.ReLU(inplace=True)\n",
+        "        self.dropout7 = nn.Dropout(p=0.5)\n",
+        "        self.fc8 = nn.Linear(in_features=4096, out_features=2622, bias=True)\n",
+        "\n",
+        "    def forward(self, x0, is_fc8=False):\n",
+        "        x1 = self.conv1_1(x0)\n",
+        "        x2 = self.relu1_1(x1)\n",
+        "        x3 = self.conv1_2(x2)\n",
+        "        x4 = self.relu1_2(x3)\n",
+        "        x5 = self.pool1(x4)\n",
+        "        x6 = self.conv2_1(x5)\n",
+        "        x7 = self.relu2_1(x6)\n",
+        "        x8 = self.conv2_2(x7)\n",
+        "        x9 = self.relu2_2(x8)\n",
+        "        x10 = self.pool2(x9)\n",
+        "        x11 = self.conv3_1(x10)\n",
+        "        x12 = self.relu3_1(x11)\n",
+        "        x13 = self.conv3_2(x12)\n",
+        "        x14 = self.relu3_2(x13)\n",
+        "        x15 = self.conv3_3(x14)\n",
+        "        x16 = self.relu3_3(x15)\n",
+        "        x17 = self.pool3(x16)\n",
+        "        x18 = self.conv4_1(x17)\n",
+        "        x19 = self.relu4_1(x18)\n",
+        "        x20 = self.conv4_2(x19)\n",
+        "        x21 = self.relu4_2(x20)\n",
+        "        x22 = self.conv4_3(x21)\n",
+        "        x23 = self.relu4_3(x22)\n",
+        "        x24 = self.pool4(x23)\n",
+        "        x25 = self.conv5_1(x24)\n",
+        "        x26 = self.relu5_1(x25)\n",
+        "        x27 = self.conv5_2(x26)\n",
+        "        x28 = self.relu5_2(x27)\n",
+        "        x29 = self.conv5_3(x28)\n",
+        "        x30 = self.relu5_3(x29)\n",
+        "        x31_preflatten = self.pool5(x30)\n",
+        "        x31 = x31_preflatten.view(x31_preflatten.size(0), -1)\n",
+        "        x32 = self.fc6(x31)\n",
+        "        x33 = self.relu6(x32)\n",
+        "        x34 = self.dropout6(x33)\n",
+        "        x35 = self.fc7(x34)\n",
+        "        x36 = self.relu7(x35)\n",
+        "        x37 = self.dropout7(x36)\n",
+        "        if is_fc8:\n",
+        "            x38 = self.fc8(x37)\n",
+        "        else:\n",
+        "            x38 = x37\n",
+        "        return x38\n",
+        "\n",
+        "\n",
+        "def vgg_face_dag(weights_path=None, **kwargs):\n",
+        "    \"\"\"\n",
+        "    load imported model instance\n",
+        "    Args:\n",
+        "        weights_path (str): If set, loads model weights from the given path\n",
+        "    \"\"\"\n",
+        "    model = Vgg_face_dag()\n",
+        "    if weights_path:\n",
+        "        state_dict = torch.load(weights_path)\n",
+        "        model.load_state_dict(state_dict)\n",
+        "    return model\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "execution_count": null,
       "outputs": []
